# 5DOF-Arm-simulator

./: .gitignore  CMakeLists.txt
include/: config.hpp  renderer.hpp  robot.hpp  simulation.hpp  utils.hpp
include/robot_arm/core/: config.hpp  joint.hpp  robot.hpp  utils.hpp
include/robot_arm/sim/: config.hpp  primitive.hpp  simulator.hpp  utils.hpp
resources/: J0.mtl
source/: main.cpp  renderer.cpp  robot.cpp  simulation.cpp  utils.cpp
source/core/: joint.cpp  robot.cpp  utils.cpp
source/sim/: primitive.cpp  simulator.cpp  utils.cpp
